--- a/css/main.scss
+++ b/css/main.scss
@@ -6,3 +6,6 @@
 @import "blocks/we-best.scss";
 @import "blocks/people-page.scss";
 @import "blocks/team.scss";
+@import "blocks/menu-page.scss";
+@import "blocks/delivery.scss";
+@import "blocks/mapandfooter.scss";
