--- a/css/blocks/delivery.scss
+++ b/css/blocks/delivery.scss
@@ -1,3 +1,25 @@
+$tablets: 768px;
+$phones: 480px;
+
+@media (max-width: $tablets) {
+
+}
+
+@media (max-width: $phones) {
+
+}
+
+@mixin tablets {
+	@media (max-width: $tablets) {
+		@content;
+	}
+}
+@mixin phones {
+	@media (max-width: $phones) {
+		@content;
+	}
+}
+
 .order__section{
 	display: flex;
 	justify-content: center;
@@ -11,7 +33,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
-	width: 1100px;
+	width: 68.75rem;
 	height: 100%;
 	justify-content: center;
 	align-items: center;
@@ -24,9 +46,9 @@
 	height: auto;
 	color: #f9b43b;
 	font-family: Gagalin;
-	font-size: 72px;
+	font-size: 4.5rem;
 	font-weight: 400;
-	line-height: 63.99px;
+	line-height: 3.9375rem;
 }
 .form__container{
 	display: flex;
@@ -35,26 +57,41 @@
 	margin-top: 10%;
 	justify-content: space-between;
 }
+.order__form{
+	flex: 1;
+    flex-direction: row;
+    display: flex;
+    justify-content: space-between;
+    @include tablets {
+	align-items: center;
+    flex-direction: column;
+}
+
+}
 .form__elem{
 	display: flex;
 	width: 48%;
 	height: 100%;
 	flex-direction: column;
+	@include tablets {
+	height: auto;
+}
 }
 .form__row{
 	display: flex;
 }
 .form__block{
 	flex: 1;
-	margin-right: 20px;
+	margin-right: 1.25rem;
 
 	&:last-child {
 		margin-right: 0;}
 }
 .form__input{
 	width: 100%;
-	border-radius: 5px;
-	height: 36px;
+	border-radius: 0.3125rem;
+	height: 2.25rem;
+	border: none;
 }
 .form__elem_secundar{
 	display: flex;
@@ -64,28 +101,34 @@
 .form__block-title{
 	color: #ffffff;
 	font-family: Ubuntu;
-	font-size: 14px;
+	font-size: 0.875rem;
 	font-weight: 300;
-	line-height: 24px;
+	line-height: 1.5rem;
 }
 .textarea__elem{
 	width: 100%;
     height: 140%;
     border: 0;
     outline: none;
-    border-radius: 5px;
+    border-radius: 0.3125rem;
     resize: none;
-    border: 1px solid #fff;
 }
 .radio-group{
 	display: flex;
 	margin-top: 12%;
     justify-content: space-between;
     align-items: center;
+    @include tablets {
+	
+}
+    @include phones {
+	
+}
+
 }
 .form__col {
     flex: 1;
-    padding: 0 10px;}
+    padding: 0 0.625rem;}
     .radio__elem {
     position: absolute;
     opacity: 0;
@@ -93,27 +136,28 @@
 .radio__text{
 	color: #ffffff;
 	font-family: Ubuntu;
-	font-size: 14px;
+	font-size: 0.875rem;
 	font-weight: 300;
-	line-height: 24px;
-	margin-left: 10px;
+	line-height: 1.5rem;
+	margin-left: 0.625rem;
 }
 
 .radio__btn {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 15px;
-    height: 15px;
+    width: 0.9375rem;
+    height: 0.9375rem;
     border-radius: 50%;
-    border: 1px solid #fff;
+    border: 0.0625rem solid #fff;
+    background-color: #fff;
 }
 
 .radio__btn:after {
     content: '';
     display: inline-block;
-    width: 5px;
-    height: 5px;
+    width: 0.3125rem;
+    height: 0.3125rem;
     border-radius: 50%;
     background-color: #e35028;
     opacity: 0;
@@ -136,6 +180,18 @@
     align-items: center;
     justify-content: space-between;
     width: 60%;
+    @include tablets {
+	width: 100%;
+	height: 100%;
+}
+    @include phones {
+	margin-bottom: 15%;
+}
+}
+.label__modif{
+	@include tablets {
+	margin-top: 10%;
+}
 }
 
 .form__block-check{
@@ -149,6 +205,11 @@
 	position: absolute;
 	bottom: -22%;
     right: 38%;
+    @include tablets {
+	position: absolute;
+    right: 40%;
+    top: 111%;
+}
 }
 .button__clear{
 	display: flex;
@@ -157,7 +218,45 @@
     right: 30%;
     color: #ffffff;
 	font-family: Ubuntu;
-	font-size: 14px;
+	font-size: 0.875rem;
 	font-weight: 300;
-	line-height: 24px;
+	line-height: 1.5rem;
+	@include tablets {
+	right: 25%;
+}
+}
+.checkbox {
+	display: none;
+}
+.label__txt{
+	color: #ffffff;
+	font-family: Ubuntu;
+	font-size: 0.875rem;
+	font-weight: 300;
+	line-height: 1.5rem;
+}
+.checkbox-custom {
+	position: relative;
+	width: 0.9375rem;
+	height: 0.9375rem;
+	border: 0.0625rem solid #fff;
+	border-radius: 0.0625rem;
+	background-color: #fff;
+}
+.checkbox-custom,
+.label {
+	display: inline-block;
+	vertical-align: middle;
+}
+.checkbox:checked + .checkbox-custom::before {
+	content: "";
+	display: block;
+	position: absolute;
+	top: 0.125rem;
+	right: 0.125rem;
+	bottom: 0.125rem;
+	left: 0.125rem;
+	background-image: url(../img/chek.png);
+	background-repeat: no-repeat;
+	border-radius: 0.125rem;
 }
