--- a/css/blocks/hero-page.css
+++ b/css/blocks/hero-page.css
@@ -14,3 +14,6 @@
   background-image: url(../img/bg_img_page1.png);
   background-repeat: no-repeat;
   background-size: cover; }
+
+html {
+  font-size: 16px; }
