--- a/css/blocks/hero__container.css
+++ b/css/blocks/hero__container.css
@@ -2,12 +2,13 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  position: relative;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
   height: 100vh;
-  width: 950px;
+  width: 68.75rem;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between; }
@@ -19,17 +20,34 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+  -webkit-box-pack: space-evenly;
+  -ms-flex-pack: space-evenly;
+  justify-content: space-evenly;
   width: 100%;
-  height: 70px;
+  height: 4.375rem;
   margin-top: 2vh; }
+  @media (max-width: 768px) {
+    .header {
+      -webkit-box-pack: start;
+      -ms-flex-pack: start;
+      justify-content: flex-start; } }
+  @media (max-width: 480px) {
+    .header {
+      -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+      justify-content: space-evenly; } }
+
+.img-hero {
+  max-width: 100%;
+  max-height: 100%; }
 
 .sidebar {
   text-align: center;
   display: inline;
   text-decoration: none; }
+  @media (max-width: 768px) {
+    .sidebar {
+      display: none; } }
 
 .sidebar__container {
   display: -webkit-box;
@@ -44,7 +62,7 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  padding: 7px; }
+  padding: 0.4375rem; }
 
 a {
   text-decoration: none;
@@ -53,17 +71,17 @@ a {
 .sidebar__elem_txt {
   color: #ffffff;
   font-family: Ubuntu;
-  font-size: 13px;
+  font-size: 0.8125rem;
   font-weight: 500;
-  line-height: 30px;
+  line-height: 1.875rem;
   text-transform: uppercase; }
 
 .circle {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 5px;
-  height: 5px;
+  width: 0.3125rem;
+  height: 0.3125rem;
   border-radius: 50%;
   background-color: #fff; }
 
@@ -71,6 +89,7 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  right: 0%;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
@@ -79,14 +98,22 @@ a {
   justify-content: center;
   color: #ffffff;
   font-family: Ubuntu;
-  font-size: 13px;
+  font-size: 0.8125rem;
   font-weight: 500;
-  line-height: 30px;
+  line-height: 1.875rem;
   text-transform: uppercase;
-  width: 97px;
-  height: 35px;
-  border-radius: 5px;
+  width: 6.0625rem;
+  height: 2.1875rem;
+  border-radius: 0.3125rem;
   background-color: #e45028; }
+  @media (max-width: 768px) {
+    .button {
+      position: absolute;
+      right: 15%;
+      top: 3%; } }
+  @media (max-width: 480px) {
+    .button {
+      position: unset; } }
 
 .hero__content {
   display: -webkit-box;
@@ -94,6 +121,9 @@ a {
   display: flex;
   width: 100%;
   height: 100%;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center; }
@@ -121,22 +151,48 @@ a {
 .content__txt1 {
   color: #f9b43b;
   font-family: Gagalin;
-  font-size: 72px;
+  font-size: 4.5rem;
   font-weight: 400;
-  line-height: 85px; }
+  line-height: 5.3125rem; }
 
 .content__txt2 {
   color: #ffffff;
   font-family: Lifehack;
   font-weight: 500;
-  font-size: 65px;
-  letter-spacing: -1.63px;
-  line-height: 85px; }
+  font-size: 4.0625rem;
+  letter-spacing: -0.0625rem;
+  line-height: 5.3125rem; }
 
 .content__txt3 {
   color: #ffffff;
   font-family: Lifehack;
   font-weight: 500;
-  font-size: 65px;
-  letter-spacing: -1.63px;
-  line-height: 60px; }
+  font-size: 4.0625rem;
+  letter-spacing: -0.0625rem;
+  line-height: 3.75rem; }
+
+.nav__sidebar-icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: 2%;
+  border-radius: 20%;
+  right: 0%;
+  background-color: #ffd47a;
+  display: none; }
+  @media (max-width: 768px) {
+    .nav__sidebar-icon {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      right: 2%; } }
+  @media (max-width: 480px) {
+    .nav__sidebar-icon {
+      position: unset; } }
+
+.sidebar-icon__mdf {
+  width: 100%;
+  height: 100%; }
