--- a/css/blocks/menu-page.scss
+++ b/css/blocks/menu-page.scss
@@ -10,9 +10,9 @@
 .menu__page .menu__title{
   	color: #ffffff;
 	font-family: Gagalin;
-	font-size: 72px;
+	font-size: 4.5rem;
 	font-weight: 400;
-	line-height: 64px;
+	line-height: 4rem;
 	margin-top: 10%;
 	margin-left: 15%;
 }
@@ -33,7 +33,7 @@
 }
 .accordeon-menu__btn{
 	position: relative;
-	width: 80px;
+	width: 5rem;
 	flex: 1 0 auto;
 	background-position: center;
 	-webkit-background-size: cover;
@@ -48,27 +48,27 @@
 	white-space: nowrap;
 	color: #ffffff;
 	font-family: Gagalin;
-	font-size: 40px;
+	font-size: 2.5rem;
 	font-weight: 400;
-	line-height: 63.75px;
+	line-height: 3.9375rem;
 	transform-origin: 0 0;
 	margin-top: -6%;
 }
 .accordeon-menu__content{
 	background-color: #2f3234;
 	opacity: 0.93;
-	max-width: 0px;
+	max-width: 0rem;
 	flex: 0 1 auto;
 	overflow: hidden;
 	transition: max-width 0.3s;
 }
 .accordeon-menu__txt{
-	padding: 30px;
-	width: 500px;
+	padding: 1.875rem;
+	width: 31.25rem;
 }
 .accordeon-menu__elem:hover {
 	.accordeon-menu__content{
-	max-width: 500px;
+	max-width: 31.25rem;
 	}
 	 .accordeon-menu__btn-txt{
 		color: #f9b43b;
