--- a/css/blocks/people-page.css
+++ b/css/blocks/people-page.css
@@ -7,15 +7,32 @@
   background-color: #000;
   width: 100%;
   height: 100vh; }
+  @media (max-width: 768px) {
+    .people-page {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column; } }
 
-.people_block1 {
+.people__elements {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding-left: inherit;
+  margin: 0; }
+
+.people__container {
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  background-image: url(../img/people_img1.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -24,157 +41,40 @@
   filter: grayscale(100%) brightness(100%);
   width: 25%;
   height: 50%; }
+  @media (max-width: 768px) {
+    .people__container {
+      width: 50%; } }
+  @media (max-width: 480px) {
+    .people__container {
+      width: 100%; } }
 
-.people_block2 {
-  position: relative;
+.people__content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  background-image: url(../img/people_img2.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 50% 50%;
-  -webkit-filter: grayscale(100%) brightness(100%);
-  filter: grayscale(100%) brightness(100%);
-  width: 25%;
-  height: 50%; }
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  margin-top: 15%;
+  margin-left: 7.2%;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  width: 81%;
+  height: 70%;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  opacity: 0; }
 
-.people_block3 {
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  background-image: url(../img/people_img3.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 50% 50%;
-  -webkit-filter: grayscale(100%) brightness(100%);
-  filter: grayscale(100%) brightness(100%);
-  width: 25%;
-  height: 50%; }
-
-.people_block4 {
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  background-image: url(../img/people_img4.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 50% 50%;
-  -webkit-filter: grayscale(100%) brightness(100%);
-  filter: grayscale(100%) brightness(100%);
-  width: 25%;
-  height: 50%; }
-
-.people_block5 {
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  background-image: url(../img/people_img5.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 50% 50%;
-  -webkit-filter: grayscale(100%) brightness(100%);
-  filter: grayscale(100%) brightness(100%);
-  width: 25%;
-  height: 50%; }
-
-.people_block6 {
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  background-image: url(../img/people_img6.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 50% 50%;
-  -webkit-filter: grayscale(100%) brightness(100%);
-  filter: grayscale(100%) brightness(100%);
-  width: 25%;
-  height: 50%; }
-
-.people_block7 {
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  background-image: url(../img/people_img7.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 50% 50%;
-  -webkit-filter: grayscale(100%) brightness(100%);
-  filter: grayscale(100%) brightness(100%);
-  width: 25%;
-  height: 50%; }
-
-.people_block8 {
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  background-image: url(../img/people_img8.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 50% 50%;
-  -webkit-filter: grayscale(100%) brightness(100%);
-  filter: grayscale(100%) brightness(100%);
-  width: 25%;
-  height: 50%; }
-
-.people_block1:hover {
+.people__container:hover {
   -webkit-filter: brightness(100%);
   filter: brightness(100%); }
-
-.people_block2:hover {
-  -webkit-filter: brightness(100%);
-  filter: brightness(100%); }
-
-.people_block3:hover {
-  -webkit-filter: brightness(100%);
-  filter: brightness(100%); }
-
-.people_block4:hover {
-  -webkit-filter: brightness(100%);
-  filter: brightness(100%); }
-
-.people_block5:hover {
-  -webkit-filter: brightness(100%);
-  filter: brightness(100%); }
-
-.people_block6:hover {
-  -webkit-filter: brightness(100%);
-  filter: brightness(100%); }
-
-.people_block7:hover {
-  -webkit-filter: brightness(100%);
-  filter: brightness(100%); }
-
-.people_block8:hover {
-  -webkit-filter: brightness(100%);
-  filter: brightness(100%); }
+  .people__container:hover .people__content {
+    opacity: 1;
+    -webkit-transition-duration: 1s;
+    -o-transition-duration: 1s;
+    transition-duration: 1s; }
 
 .people_descr {
   display: -webkit-box;
@@ -196,22 +96,19 @@
   left: 6%;
   opacity: 0; }
 
-.people_descr:hover {
-  opacity: 1; }
-
-.people_name {
+.people__name {
   color: #ffffff;
   font-family: Gagalin;
-  font-size: 14px;
+  font-size: 0.875rem;
   font-weight: 400;
-  line-height: 28.11px; }
+  line-height: 1.75rem; }
 
-.people_comment {
+.people__comment {
   color: #ffffff;
   font-family: Ubuntu;
-  font-size: 14px;
+  font-size: 0.875rem;
   font-weight: 300;
-  line-height: 24px; }
+  line-height: 1.5rem; }
 
 .people_details {
   display: -webkit-box;
@@ -223,12 +120,27 @@
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  width: 110px;
-  height: 35px;
+  width: 6.875rem;
+  height: 2.125rem;
   background-color: #2f3234;
-  border-radius: 5px; }
+  border-radius: 0.3125rem; }
 
-.people_details-btn {
+.more__btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  width: 6.875rem;
+  height: 2.1875rem;
+  border-radius: 0.3125rem;
+  background-color: #2f3234; }
+
+.more-btn__txt {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -242,7 +154,7 @@
   height: 100%;
   color: #ffffff;
   font-family: Ubuntu;
-  font-size: 13px;
+  font-size: 0.8125rem;
   font-weight: 500;
-  line-height: 30px;
+  line-height: 1.875rem;
   text-transform: uppercase; }
