--- a/css/blocks/team.css
+++ b/css/blocks/team.css
@@ -26,8 +26,7 @@
   justify-content: center;
   position: relative;
   width: 100%;
-  height: 100%;
-  border: solid 1px #f9b43b; }
+  height: 100%; }
 
 .container__block {
   display: -webkit-box;
@@ -47,6 +46,9 @@
   bottom: 0;
   background-color: #2f3234;
   opacity: 0.93; }
+  @media (max-width: 768px) {
+    .container__block {
+      top: 15.5%; } }
 
 .accordeon__block {
   display: -webkit-box;
@@ -62,6 +64,15 @@
   position: absolute;
   width: 100%;
   height: 100%; }
+
+.accordeon__elements {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding-left: inherit;
+  margin: 0; }
 
 .team__dscr__block {
   display: -webkit-box;
@@ -86,9 +97,9 @@
   top: 0;
   color: #f9b43b;
   font-family: Gagalin;
-  font-size: 72px;
+  font-size: 4.5rem;
   font-weight: 400;
-  line-height: 64.04px; }
+  line-height: 4rem; }
 
 .team__acordeon {
   display: -webkit-box;
@@ -123,16 +134,16 @@
   width: 0;
   height: 0;
   border-style: solid;
-  border-width: 0 4.5px 7px 4.5px;
+  border-width: 0 0.25rem 0.4375rem 0.25rem;
   border-color: transparent transparent #f9b33b transparent; }
 
 .team-name__txt {
   padding: 5%;
   color: #ffffff;
   font-family: Gagalin;
-  font-size: 14px;
+  font-size: 0.875rem;
   font-weight: 400;
-  line-height: 28.13px; }
+  line-height: 1.75rem; }
 
 .team__dscr {
   display: -webkit-box;
@@ -143,8 +154,10 @@
   -ms-flex-align: center;
   align-items: center;
   overflow: hidden;
-  max-height: 0%;
-  height: 0px; }
+  max-height: 0;
+  -webkit-transition: 1.5s;
+  -o-transition: 1.5s;
+  transition: 1.5s; }
 
 .team__img {
   display: -webkit-box;
@@ -156,8 +169,8 @@
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  width: 100px;
-  height: 100px;
+  width: 6.25rem;
+  height: 6.25rem;
   border-radius: 50%;
   background-size: auto;
   overflow: hidden; }
@@ -180,30 +193,29 @@
   flex-direction: column;
   width: 45%;
   height: 100%;
-  padding: 20px;
-  margin-top: -22px; }
+  padding: 1.25rem;
+  margin-top: -1.375rem; }
 
 .dscr-txt__function {
   color: #ffffff;
   font-family: Ubuntu;
-  font-size: 14px;
-  line-height: 24.01px;
+  font-size: 0.875rem;
+  line-height: 1.5rem;
   font-weight: 700; }
 
 .dscr-txt__txt {
   color: #ffffff;
   font-family: Ubuntu;
-  font-size: 14px;
+  font-size: 0.875rem;
   font-weight: 300;
-  line-height: 24.01px; }
+  line-height: 1.5rem; }
 
 .team__acordeon:hover .team__dscr {
-  max-height: 100%;
-  height: 100%; }
+  max-height: 62.5rem; }
 
 .team__acordeon:hover .team-name__txt {
   color: #f9b43b; }
 
 .team__acordeon:hover .pre-name__triagle {
-  border-width: 7px 4.5px 0 4.5px;
+  border-width: 0.4375rem 0.25rem 0 0.25rem;
   border-color: #f9b33b transparent transparent transparent; }
