--- a/css/blocks/we-best.css
+++ b/css/blocks/we-best.css
@@ -1,10 +1,107 @@
+ul {
+  list-style-type: none; }
+
+.we-best-page {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  background-image: url(../img/bg_pg2.png);
+  background-repeat: no-repeat;
+  background-size: cover; }
+
 .we-best__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  height: 100vh;
-  width: 950px;
+  height: 55%;
+  width: 100%;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between; }
+  @media (max-width: 480px) {
+    .we-best__container {
+      height: 100%; } }
+
+.we-best__content {
+  height: 70%;
+  width: 100%; }
+  @media (max-width: 480px) {
+    .we-best__content {
+      height: 100%; } }
+
+.content__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style-type: none;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: space-evenly;
+  -ms-flex-pack: space-evenly;
+  justify-content: space-evenly;
+  margin: 0 10%; }
+  @media (max-width: 480px) {
+    .content__block {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column; } }
+
+.content__block ul {
+  list-style-type: none; }
+
+.container__txt {
+  color: #2f3234;
+  font-family: Gagalin;
+  font-size: 4.5rem;
+  font-weight: 400;
+  line-height: 4rem; }
+
+.content__elem {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-align: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.content__elem_txt1 {
+  color: #2f3234;
+  font-family: Lifehack;
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 1.75rem;
+  letter-spacing: -0.6px; }
+
+.content__elem_txt2 {
+  width: 17.5625rem;
+  opacity: 0.8;
+  color: #2f3234;
+  font-family: Ubuntu;
+  font-size: 0.875;
+  font-weight: 300;
+  line-height: 1.5rem; }
+
+.content__elem li {
+  margin-bottom: 1.25rem; }
