--- a/css/main.scss
+++ b/css/main.scss
@@ -1,5 +1,9 @@
+$tablets: 768px;
+$phones: 480px;
+
 @import "normalize.scss";
 @import "general/fonts.scss";
+@import "general/layout.scss";
 @import "blocks/landing-page.scss";
 @import "blocks/hero-page.scss";
 @import "blocks/hero__container.scss";
@@ -9,3 +13,6 @@
 @import "blocks/menu-page.scss";
 @import "blocks/delivery.scss";
 @import "blocks/mapandfooter.scss";
+@import "general/media.scss";
+
+
